@@ -1,3 +1,8 @@
+2010-06-30  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/44628
+	* g++.dg/template/crash97.C: New.
+
 2010-06-30  Jakub Jelinek  <jakub@redhat.com>
 
 	Backport from mainline
